Fix horizontally alignment

--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -5,4 +5,5 @@ footer {
   position:absolute;
   width:100%;
   text-align:center;
+  line-height: 30px;
 }
